# absenteeism_at_work

./: .dvcignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  FRONTEND_SUMMARY.md  Makefile  README.md  README_FRONTEND.md  absenteeism-key.pem  app.py  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-api.txt  requirements.txt
.github/: BRANCH_STRATEGY.md
.github/workflows/: deploy-mlflow.yml  deploy.yml
absenteeism_at_work/: api.py  config.py  dataset.py  features.py  plots.py  preprocess_data.py  visualize_data.py
absenteeism_at_work/mlruns/0/: meta.yaml
absenteeism_at_work/mlruns/520279109276064800/: meta.yaml
absenteeism_at_work/mlruns/520279109276064800/b94258d402ae44898750623b94d0d4e7/: meta.yaml
absenteeism_at_work/modeling/: mlflow_smoke_test.py  predict.py  train.py
absenteeism_at_work/modeling/.ipynb_checkpoints/: mlflow_absenteeism_train-checkpoint.py
absenteeism_at_work/static/: index.html  script.js  style.css
infrastructure/cloudformation/: MLFLOW-README.md  README.md  infrastructure.yaml  mlflow-infrastructure.yaml
infrastructure/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  tfplan  tfplan.destroy  variables.tf
mlruns/0/: meta.yaml
mlruns/118954917199812154/: meta.yaml
mlruns/118954917199812154/dc2cdae0d80049cab536dd850e7310fb/: meta.yaml
mlruns/118954917199812154/dc2cdae0d80049cab536dd850e7310fb/metrics/: mae  r2  rmse
mlruns/118954917199812154/dc2cdae0d80049cab536dd850e7310fb/params/: preprocessing
mlruns/118954917199812154/dc2cdae0d80049cab536dd850e7310fb/tags/: mlflow.source.name
mlruns/217624187705294146/: meta.yaml
mlruns/217624187705294146/6899598f0de3439ea737312a59eecdfc/: meta.yaml
mlruns/217624187705294146/6899598f0de3439ea737312a59eecdfc/metrics/: MAE  MSE  (+2 more)
mlruns/359287279005561968/: meta.yaml
mlruns/359287279005561968/139188580d13412da7614888361ef09d/: meta.yaml
mlruns/359287279005561968/224fadb0246c4b35a4f0cad19958b4b6/: meta.yaml
mlruns/359287279005561968/31c666a9c8f046378e2c049128fb4b3d/: meta.yaml
mlruns/359287279005561968/fb6d74cd1b4f4f949dbeb267ac78725f/: meta.yaml
mlruns/998369225832319422/: meta.yaml
mlruns/998369225832319422/0f7bd2fa1870472e86db3b912dbadbbe/: meta.yaml
mlruns/998369225832319422/35d3fa64d7ef41b1a7e2e67df8eb97a5/: meta.yaml
mlruns/998369225832319422/4be430917abc4431b12ee9224acf1be7/: meta.yaml
mlruns/998369225832319422/4fc79b0db67f452989704646c53beae4/: meta.yaml
mlruns/998369225832319422/7c83e04cb2784e0591d75e1aab6788cb/: meta.yaml
mlruns/998369225832319422/e4098d047b2343ef98c8921c23000ab7/: meta.yaml
mlruns/998369225832319422/f7f579ba36b44c029b2d9ba6fbd905ef/: meta.yaml
mlruns/models/absenteeism_regression/: meta.yaml
mlruns/models/absenteeism_regression_v1/: meta.yaml
notebooks/Phase1/: data_preparation.ipynb  model_train.ipynb
reports/metrics/: .gitkeep  training_metrics.json
scripts/: deploy.sh  fix_ec2_keypair.sh  generate_keypair.sh  setup_aws_infra.sh
(+112 files in other folders)
